--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <li>画面が切り替わるので、「アンケート回答→ポイント利用」ボタンをクリックし、<br>
                 病院のエンゲージメントアンケートに回答をお願いします（画面下部の送信ボタンを押下して完了です）。</li>
         </ol>
-        <p><strong>プロトタイプサイト画面：</strong> <a href="point_page.html">CareBonus</a></p>
+        <p><strong>プロトタイプサイト画面：</strong> <a href="Point_page.html">CareBonus</a></p>
     </div>
 
     <div class="section">
