--- a/B_nurse.html
+++ b/B_nurse.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>看護師募集 - ボンボン病院 | マイナビメディカル</title>
+    <title>看護師募集 - △△病院 | 求人サイト-Ｂ-</title>
     <style>
         :root {
             --primary-color: #00A0E9;
@@ -251,14 +251,14 @@
 <body>
     <header class="header">
         <div class="container">
-
+            <img src="/api/placeholder/180/40" alt="求人サイト-Ｂ-" />
         </div>
     </header>
 
     <div class="main-visual">
         <div class="container">
             <h1>看護師募集</h1>
-            <p>医療法人社団ボンボン会 ボンボン病院</p>
+            <p>医療法人社団○○会 △△病院</p>
             <p>7:1看護体制で質の高い看護を実践できる環境です</p>
         </div>
     </div>
@@ -347,20 +347,20 @@
         <section class="workplace-gallery">
             <h2>職場環境のご紹介</h2>
             <div class="gallery-item">
-
+                <img src="/api/placeholder/400/300" alt="ナースステーション">
             </div>
             <div class="gallery-item">
-
+                <img src="/api/placeholder/400/300" alt="病棟">
             </div>
             <div class="gallery-item">
-
+                <img src="/api/placeholder/400/300" alt="カンファレンスルーム">
             </div>
         </section>
 
         <section class="interview-section">
             <h2>先輩看護師インタビュー</h2>
             <div class="interview-content">
-                <p>"インタビュー"</p>
+                <img src="/api/placeholder/200/200" alt="インタビュー">
                 <div>
                     <h3>外科病棟 主任看護師 山田さん（入職8年目）</h3>
                     <p>「教育体制が充実しているので、新人の頃から安心して看護技術を習得できました。専門・認定看護師を目指す方へのサポートも手厚く、自身のキャリアアップに繋がる環境です。」</p>
